--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -229,7 +229,7 @@
 		<!--  -->
 		<div class="lw-auto-slider" layout="row" layout-align="center center" layout-wrap style="position: relative;">
 			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2; padding-top: 64px; padding-bottom: 64px; position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
-				<div layout="row" layout-align="start center" flex="100" style="overflow-x: scroll;">
+				<div layout="row" layout-wrap layout-align="start center" style="overflow-x: scroll; width: {{window_width * 2}}">
 					<div layout-padding flex="100" flex-gt-sm="33">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
