slider -- working on scrolling content
trying to maintain reasonable proportions

--- a/lib/client/app/stylesheets/containers.css
+++ b/lib/client/app/stylesheets/containers.css
@@ -16,3 +16,8 @@ polyline{
 }
 
 .lw-auto-slider {min-height: 600px;}
+.index-blog-post {width: 450px;}
+
+@media screen and (max-width: 839px) {
+  .index-blog-post {width: 350px;}
+}
