--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -228,9 +228,9 @@
 
 		<!--  -->
 		<div class="lw-auto-slider" layout="row" layout-align="center center" layout-wrap style="position: relative;">
-			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2; padding-top: 64px; padding-bottom: 64px; position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
-				<div layout="row" layout-wrap layout-align="start center" style="overflow-x: scroll; width: {{window_width * 2}}">
-					<div layout-padding flex="100" flex-gt-sm="33">
+			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2; padding-top: 64px; padding-bottom: 64px; position: absolute; top: 0; bottom: 0; left: 0; right: 0; overflow-x: scroll;">
+				<div layout="row" layout-align="start center" style="width: {{window_width * 2}}px;">
+					<div layout-padding flex="100" flex-gt-sm="33" class="index-blog-post">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
 							<md-card-header>
@@ -243,7 +243,7 @@
 							</md-card-content>
 						</md-card>
 					</div>
-					<div layout-padding flex="100" flex-gt-sm="33">
+					<div layout-padding flex="100" flex-gt-sm="33" class="index-blog-post">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
 							<md-card-header>
@@ -256,7 +256,7 @@
 							</md-card-content>
 						</md-card>
 					</div>
-					<div layout-padding flex="100" flex-gt-sm="33">
+					<div layout-padding flex="100" flex-gt-sm="33" class="index-blog-post">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 							<md-card-header>
@@ -269,7 +269,7 @@
 							</md-card-content>
 						</md-card>
 					</div>
-					<div layout-padding flex="100" flex-gt-sm="33">
+					<div layout-padding flex="100" flex-gt-sm="33" class="index-blog-post">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 							<md-card-header>
