--- a/lib/client/app/stylesheets/containers.css
+++ b/lib/client/app/stylesheets/containers.css
@@ -15,9 +15,10 @@ polyline{
 	fill: none;
 }
 
-.lw-auto-slider {min-height: 600px;}
-.index-blog-post {width: 450px;}
+.lw-auto-slider {height: 600px;}
+.index-blog-post {max-width: 450px;}
 
 @media screen and (max-width: 839px) {
-  .index-blog-post {width: 350px;}
+	.lw-auto-slider {height: 500px;}
+  	.index-blog-post {max-width: 350px;}
 }
