--- a/lib/client/app/stylesheets/containers.css
+++ b/lib/client/app/stylesheets/containers.css
@@ -15,8 +15,35 @@ polyline{
 	fill: none;
 }
 
+.navigation.panel {
+	width: 50%; height: 100%; max-height: 100%; 
+	overflow-y: auto; position: absolute; top: 0; 
+	right: -50%;
+}
+
+.navigation.panel.open {
+	animation-name: navigation_open;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+}
+
+.navigation.panel.close {
+	animation-name: navigation_close;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+}
+
+@keyframes navigation_open {
+    from {right: -50%;}
+    to {right: 0;}
+}
+@keyframes navigation_close {
+    from {right: 0;}
+    to {right: -50%;}
+}
+
 .lw-auto-slider {height: 600px;}
-.index-blog-post {max-width: 450px!important;}
+.index-blog-post {max-width: 450px!important; min-width: 33%;}
 
 @media screen and (max-width: 839px) {
 	.lw-auto-slider {height: 500px;}
