--- a/lib/client/app/stylesheets/containers.css
+++ b/lib/client/app/stylesheets/containers.css
@@ -17,20 +17,21 @@ polyline{
 
 .navigation.panel {
 	width: 50%; height: 100%; max-height: 100%; 
-	overflow-y: auto; position: absolute; top: 0; 
-	right: -50%;
+	overflow-y: auto; position: fixed; top: 0; 
 }
 
 .navigation.panel.open {
 	animation-name: navigation_open;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
+    right: 0;
 }
 
 .navigation.panel.close {
 	animation-name: navigation_close;
     animation-duration: 1s;
     animation-timing-function: ease-in;
+    right: -50%;
 }
 
 @keyframes navigation_open {
