--- a/lib/client/app/stylesheets/containers.css
+++ b/lib/client/app/stylesheets/containers.css
@@ -17,7 +17,7 @@ polyline{
 
 .navigation.panel {
 	width: 50%; height: 100%; max-height: 100%; 
-	overflow-y: auto; position: fixed; top: 0; 
+	overflow-y: auto; position: fixed; top: 0; z-index: 4;
 }
 
 .navigation.panel.open {
