--- a/lib/client/app/stylesheets/containers.css
+++ b/lib/client/app/stylesheets/containers.css
@@ -16,8 +16,8 @@ polyline{
 }
 
 .navigation.panel {
-	width: 50%; height: calc(100% - 100px); max-height: 100%; 
-	overflow-y: auto; position: fixed; top: 100px; z-index: 4;
+	width: 50%; height: 100%; max-height: 100%; 
+	overflow-y: auto; position: fixed; top: 0; z-index: 4;
 }
 
 .navigation.panel.open {
