--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -99,7 +99,7 @@
 		<!-- sticky header -->
 
 		<!-- Menu Panel -->
-		<div layout="row" layout-align="start center" class="navigation panel md-whiteframe-4dp" ng-class="{'open': navigation_panel, 'close': !navigation_panel}" style="background-color: {{base_hue_darker.value}};">
+		<div layout="row" layout-align="start start" class="navigation panel md-whiteframe-4dp" ng-class="{'open': navigation_panel, 'close': !navigation_panel}" style="background-color: {{base_hue_darkest.value}};">
 			<div layout="row" layout-align="start start" style="padding-top: 64px; padding-bottom: 64px; position: relative;" flex="100">
 				<md-list flex="100">
 					<md-list-item ng-click="doPrimaryAction($event)" flex="100" layout-padding>
