--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -102,15 +102,15 @@
 		<div layout="row" layout-align="start start" class="navigation panel md-whiteframe-4dp" ng-class="{'open': navigation_panel, 'close': !navigation_panel}" style="background-color: {{base_hue_darkest.value}};">
 			<div layout="row" layout-align="start start" style="padding-top: 64px; padding-bottom: 64px; position: relative;" flex="100">
 				<md-list flex="100">
-					<md-list-item ng-click="doPrimaryAction($event)" flex="100" layout-padding>
+					<md-list-item class="navigation_item" ng-click="doPrimaryAction($event)" flex="100" layout-padding>
 						<h3 style="color: {{base_hue_lightest.value}};">Navigation Item #1</h3>
 					</md-list-item>
 					<md-divider></md-divider>
-					<md-list-item ng-click="doPrimaryAction($event)" flex="100" layout-padding>
+					<md-list-item class="navigation_item" ng-click="doPrimaryAction($event)" flex="100" layout-padding>
 						<h3 style="color: {{base_hue_lightest.value}};">Navigation Item #2</h3>
 					</md-list-item>
 					<md-divider></md-divider>
-					<md-list-item ng-click="doPrimaryAction($event)" flex="100" layout-padding>
+					<md-list-item class="navigation_item" ng-click="doPrimaryAction($event)" flex="100" layout-padding>
 						<h3 style="color: {{base_hue_lightest.value}};">Navigation Item #3</h3>
 					</md-list-item>
 					<md-divider></md-divider>
