--- a/lib/client/app/stylesheets/containers.css
+++ b/lib/client/app/stylesheets/containers.css
@@ -22,28 +22,28 @@ polyline{
 
 .navigation.panel.open {
 	animation-name: navigation_open;
-    animation-duration: .5s;
+    animation-duration: .2s;
     animation-timing-function: ease-in-out;
     right: 0;
 }
 
 .navigation.panel.close {
 	animation-name: navigation_close;
-    animation-duration: .5s;
+    animation-duration: .2s;
     animation-timing-function: ease-in;
     right: -50%;
 }
 
 .navigation_item {height: 48px;}
 
-/*@keyframes navigation_open {
+@keyframes navigation_open {
     from {right: -50%;}
     to {right: 0;}
 }
 @keyframes navigation_close {
     from {right: 0;}
     to {right: -50%;}
-}*/
+}
 
 .lw-auto-slider {height: 600px;}
 .index-blog-post {max-width: 450px!important; min-width: 33%;}
