--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -107,15 +107,15 @@
 							<md-content class="md-padding" layout="row" layout-align="start start" style="position: relative; background-color: transparent;" flex="100">
 								<md-list flex="100">
 									<md-list-item class="navigation_item" ng-click="doPrimaryAction($event)" flex="100" layout-padding>
-										<h3 style="color: {{base_hue_lightest.value}};">Navigation Item #1</h3>
+										<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;">Navigation Item #1</h3>
 									</md-list-item>
 									<md-divider></md-divider>
 									<md-list-item class="navigation_item" ng-click="doPrimaryAction($event)" flex="100" layout-padding>
-										<h3 style="color: {{base_hue_lightest.value}};">Navigation Item #2</h3>
+										<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;">Navigation Item #2</h3>
 									</md-list-item>
 									<md-divider></md-divider>
 									<md-list-item class="navigation_item" ng-click="doPrimaryAction($event)" flex="100" layout-padding>
-										<h3 style="color: {{base_hue_lightest.value}};">Navigation Item #3</h3>
+										<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;">Navigation Item #3</h3>
 									</md-list-item>
 									<md-divider></md-divider>
 								</md-list>
