--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -101,18 +101,18 @@
 		<!-- Menu Panel -->
 		<div layout="row" layout-align="start start" class="navigation panel md-whiteframe-4dp" ng-class="{'open': navigation_panel, 'close': !navigation_panel}" style="background-color: {{base_hue_darkest.value}};">
 			<div layout="row" layout-align="start start" style="position: relative;" flex="100">
-				<md-icon ng-click="navigation_panel = false" style="color: {{base_hue_lightest.value}}; opacity: .54; position: absolute; top: 16px; right: 32px; z-index: 5;">close</md-icon>
+				<md-icon ng-click="navigation_panel = false" style="color: {{base_hue_lightest.value}}; opacity: .54; position: absolute; top: 16px; right: 32px; z-index: 5; cursor: pointer;">close</md-icon>
 				<md-list flex="100" style="margin-top: 48px;">
-					<md-list-item class="navigation_item" ng-click="doPrimaryAction($event)" flex="100" layout-padding>
-						<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;">Navigation Item #1</h3>
+					<md-list-item class="navigation item" flex="100" layout-padding>
+						<a href="/"><h3>Navigation Item #1</h3></a>
 					</md-list-item>
 					<md-divider></md-divider>
-					<md-list-item class="navigation_item" ng-click="doPrimaryAction($event)" flex="100" layout-padding>
-						<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;">Navigation Item #2</h3>
+					<md-list-item class="navigation item" flex="100" layout-padding>
+						<a href="/"><h3>Navigation Item #2</h3></a>
 					</md-list-item>
 					<md-divider></md-divider>
-					<md-list-item class="navigation_item" ng-click="doPrimaryAction($event)" flex="100" layout-padding>
-						<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;">Navigation Item #3</h3>
+					<md-list-item class="navigation item" flex="100" layout-padding>
+						<a href="/"><h3>Navigation Item #3</h3></a>
 					</md-list-item>
 					<md-divider></md-divider>
 				</md-list>
