--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -117,7 +117,7 @@
 					<md-divider></md-divider>
 				</md-list>
 			</div>
-			<div layout="row" layout-align="start start" style="position: absolute; height: 48px; left: 0; bottom: 0; width: 100%; background-color: red;" flex="100"></div>
+			<div class="navigation social" layout="row" layout-align="start start" flex="100"></div>
 		</div>
 
 		<!-- messaging notification -->
