--- a/lib/client/app/stylesheets/containers.css
+++ b/lib/client/app/stylesheets/containers.css
@@ -19,15 +19,18 @@ polyline{
 	width: 50%; height: 100%; max-height: 100%; 
 	overflow-y: auto; position: fixed; top: 0; z-index: 4;
 }
+.navigation.social {
+	position: fixed; height: 48px; bottom: 0; width: 50%; background-color: red;
+} 
 
-.navigation.panel.open {
+.navigation.panel.open, .navigation.panel.open .navigation.social {
 	animation-name: navigation_open;
     animation-duration: .2s;
     animation-timing-function: ease-in-out;
     right: 0;
 }
 
-.navigation.panel.close {
+.navigation.panel.close, .navigation.panel.open .navigation.social {
 	animation-name: navigation_close;
     animation-duration: .2s;
     animation-timing-function: ease-in;
