social medial bar - mega nav

--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -117,7 +117,9 @@
 					<md-divider></md-divider>
 				</md-list>
 			</div>
-			<div class="navigation social" layout="row" layout-align="start start" flex="100"></div>
+			<div class="navigation social" layout="row" layout-align="start start" flex="100">
+				<div><a href="/"><img src=""></a></div><div><a href="/"><img src=""></a></div><div><a href="/"><img src=""></a></div>
+			</div>
 		</div>
 
 		<!-- messaging notification -->
