--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -118,7 +118,7 @@
 				</md-list>
 			</div>
 			<div class="navigation social" layout="row" layout-align="start start" flex="100">
-				<div><a href="/"><img src=""></a></div><div><a href="/"><img src=""></a></div><div><a href="/"><img src=""></a></div>
+				<div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/facebook.png"></a></div><div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/twitter.png"></a></div><div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/linkedin.png"></a></div>
 			</div>
 		</div>
 
