--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -117,8 +117,10 @@
 					<md-divider></md-divider>
 				</md-list>
 			</div>
-			<div class="navigation social" layout="row" layout-align="start start" flex="100">
-				<div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/facebook.png"></a></div><div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/twitter.png"></a></div><div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/linkedin.png"></a></div>
+			<div class="navigation social">
+				<div layout="row" layout-align="start start" flex="100">
+					<div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/facebook.png"></a></div><div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/twitter.png"></a></div><div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/linkedin.png"></a></div>
+				</div>
 			</div>
 		</div>
 
