--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -119,7 +119,21 @@
 			</div>
 			<div class="navigation social" layout="row" layout-align="start start" flex="100">
 				<div layout="row" layout-align="start start" flex="100">
-					<div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/facebook.png"></a></div><div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/twitter.png"></a></div><div flex="33" layout-align="center center"><a href="/"><img class="navigation social icons" src="media/linkedin.png"></a></div>
+					<div flex="33" layout-align="center center">
+					
+					<img class="navigation social icons" src="media/facebook.png">
+					
+					</div>
+					<div flex="33" layout-align="center center">
+					
+					<img class="navigation social icons" src="media/twitter.png">
+					
+					</div>
+					<div flex="33" layout-align="center center">
+					
+					<img class="navigation social icons" src="media/linkedin.png">
+					
+					</div>
 				</div>
 			</div>
 		</div>
