--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -121,17 +121,17 @@
 				<div layout="row" layout-align="start start" flex="100">
 					<div flex="33" layout-align="center center">
 					
-					<img class="navigation social icons" src="media/facebook.png">
+					<img class="navigation icons" src="media/facebook.png">
 					
 					</div>
 					<div flex="33" layout-align="center center">
 					
-					<img class="navigation social icons" src="media/twitter.png">
+					<img class="navigation icons" src="media/twitter.png">
 					
 					</div>
 					<div flex="33" layout-align="center center">
 					
-					<img class="navigation social icons" src="media/linkedin.png">
+					<img class="navigation icons" src="media/linkedin.png">
 					
 					</div>
 				</div>
