--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -118,7 +118,7 @@
 				</md-list>
 			</div>
 			<div class="navigation social" layout="row" layout-align="start start" flex="100">
-				<div layout="row" layout-align="start start" flex="100">
+				<div layout="row" layout-align="center center" flex="50">
 					<div flex="33" layout-align="center center">
 					
 					<img class="navigation icons" src="media/facebook.png">
