--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -19,37 +19,37 @@
 						<md-icon style="color: {{base_hue_darkest.value}}">home</md-icon>&nbsp;&nbsp;home
 					</md-button>
 					
-					<md-button ng-click="open_menu('ABOUT US')" style="color: {{base_hue_darkest.value}};">
+					<md-button ng-click="navigation_panel = true; open_menu('ABOUT US')" style="color: {{base_hue_darkest.value}};">
 						<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 						ABOUT US
 					</md-button>
 					
-					<md-button ng-click="open_menu('PROJECTS')" style="color: {{base_hue_darkest.value}};">
+					<md-button ng-click="navigation_panel = true; open_menu('PROJECTS')" style="color: {{base_hue_darkest.value}};">
 						<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 						PROJECTS
 					</md-button>
 				
-					<md-button ng-click="open_menu('SERVICES')" style="color: {{base_hue_darkest.value}};">
+					<md-button ng-click="navigation_panel = true; open_menu('SERVICES')" style="color: {{base_hue_darkest.value}};">
 						<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 						SERVICES
 					</md-button>
 					
-					<md-button ng-click="open_menu('PEOPLE')" style="color: {{base_hue_darkest.value}};">
+					<md-button ng-click="navigation_panel = true; open_menu('PEOPLE')" style="color: {{base_hue_darkest.value}};">
 						<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 						PEOPLE
 					</md-button>
 
-					<md-button ng-click="open_menu('NEWS')" style="color: {{base_hue_darkest.value}};">
+					<md-button ng-click="navigation_panel = true; open_menu('NEWS')" style="color: {{base_hue_darkest.value}};">
 						<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 						NEWS
 					</md-button>
 
-					<md-button ng-click="open_menu('CAREERS')" style="color: {{base_hue_darkest.value}};">
+					<md-button ng-click="navigation_panel = true; open_menu('CAREERS')" style="color: {{base_hue_darkest.value}};">
 						<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 						CAREERS
 					</md-button>
 
-					<md-button ng-click="open_menu('CONTACT US')" style="color: {{base_hue_darkest.value}};">
+					<md-button ng-click="navigation_panel = true; open_menu('CONTACT US')" style="color: {{base_hue_darkest.value}};">
 						<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 						CONTACT US
 					</md-button>
@@ -63,7 +63,7 @@
 		<!-- Menu Panel -->
 		<div layout="row" layout-align="start start" class="navigation panel md-whiteframe-4dp" ng-class="{'open': navigation_panel, 'close': !navigation_panel}" style="background-color: {{base_hue_darkest.value}};">
 			<div layout="row" layout-align="start start" style="position: relative;" flex="100" layout-wrap>
-				<div flex="50" layout="row" layout-align="start center">
+				<div flex="50" layout="row" layout-align="start center" layout-margin>
 					<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;" layout-padding>
 						{{menu_title}}
 					</h3>
@@ -87,7 +87,7 @@
 				</md-list>
 			</div>
 			<div class="navigation social" layout="row" layout-align="start start" flex="100">
-				<div layout="row" layout-align="center center" flex="50" layout-margin>
+				<div layout="row" layout-align="center center" flex="50" style="margin-left: 16px;">
 					<div flex="33" layout-align="center center">
 					
 					<img class="navigation icons" src="media/facebook.png">
