--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -86,35 +86,37 @@
 					<md-divider></md-divider>
 				</md-list>
 			</div>
-			<md-tabs md-dynamic-height md-border-bottom>
-				<md-tab label="Contact Info">
-					<md-content class="md-padding">
-						<h1 class="md-display-2">Contact Info</h1>
-						<p style="color: {{base_hue_lightest.value}}; opacity: .54;">
-							Phone: 817-469-1671<br>
-							Fax: 817-274-8757
-						</p>
-						<p style="color: {{base_hue_lightest.value}}; opacity: .54;">
-							Address: 519 E. Border Street<br>
-							Arlington, TX 76010
-						</p>
-					</md-content>
-				</md-tab>
-				<md-tab label="Hours">
-					<md-content class="md-padding">
-						<h1 class="md-display-2">Hours</h1>
-						<p style="color: {{base_hue_lightest.value}}; opacity: .54; text-align: right;">
-						Sunday ................... Closed<br>
-						Monday .......... 7:30AM - 5:00PM<br>
-						Tuesday ......... 7:30AM - 5:00PM<br>
-						Wednesday ....... 7:30AM - 5:00PM<br>
-						Thursday ........ 7:30AM - 5:00PM<br>
-						Friday .......... 7:30AM - 5:00PM<br>
-						Saturday ........ 7:30AM - 5:00PM
-						</p>
-					</md-content>
-				</md-tab>
-			</md-tabs>
+			<div class="container" flex="100">
+				<md-tabs md-dynamic-height md-border-bottom>
+					<md-tab label="Contact Info">
+						<md-content class="md-padding">
+							<h1 class="md-display-2">Contact Info</h1>
+							<p style="color: {{base_hue_lightest.value}}; opacity: .54;">
+								Phone: 817-469-1671<br>
+								Fax: 817-274-8757
+							</p>
+							<p style="color: {{base_hue_lightest.value}}; opacity: .54;">
+								Address: 519 E. Border Street<br>
+								Arlington, TX 76010
+							</p>
+						</md-content>
+					</md-tab>
+					<md-tab label="Hours">
+						<md-content class="md-padding">
+							<h1 class="md-display-2">Hours</h1>
+							<p style="color: {{base_hue_lightest.value}}; opacity: .54;">
+							Sunday ................... Closed<br>
+							Monday .......... 7:30AM - 5:00PM<br>
+							Tuesday ......... 7:30AM - 5:00PM<br>
+							Wednesday ....... 7:30AM - 5:00PM<br>
+							Thursday ........ 7:30AM - 5:00PM<br>
+							Friday .......... 7:30AM - 5:00PM<br>
+							Saturday ........ 7:30AM - 5:00PM
+							</p>
+						</md-content>
+					</md-tab>
+				</md-tabs>
+			</div>
 			<div class="navigation social" layout="row" layout-align="start start" flex="100">
 				<div layout="row" layout-align="center center" flex="50" style="margin-left: 32px;">
 					<div flex="33" layout-align="center center">
