--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -85,11 +85,11 @@
 					</md-list-item>
 					<md-divider></md-divider>
 				</md-list>
-				<div class="container" flex="100">
+				<br><br>
+				<div class="container" flex="100" layout-margin>
 					<md-tabs md-dynamic-height md-border-bottom>
 						<md-tab label="Contact Info">
 							<md-content class="md-padding">
-								<h1 class="md-display-2">Contact Info</h1>
 								<p style="color: {{base_hue_lightest.value}}; opacity: .54;">
 									Phone: 817-469-1671<br>
 									Fax: 817-274-8757
@@ -102,7 +102,6 @@
 						</md-tab>
 						<md-tab label="Hours">
 							<md-content class="md-padding">
-								<h1 class="md-display-2">Hours</h1>
 								<p style="color: {{base_hue_lightest.value}}; opacity: .54;">
 								Sunday ................... Closed<br>
 								Monday .......... 7:30AM - 5:00PM<br>
